# travis-generator.py

./: .travis.yml  README.md  setup.cfg
tests/travis-generator/examples/: test.py
travis_generator/: __init__.py
