# https://pypi.org/project/setupcfg-generator/
[metadata]
name = travis-generator
version = 2019.03.07
url = https://github.com/looking-for-a-job/travis-generator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = travis generator

[options]
install_requires = 
	public
	replace
	ruamel.base
	setuptools
packages = 
	travis_generator
